--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "darlan <darlanhermessjb@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "git-commit-msg-linter": "^3.0.0"
+    "@types/node": "^14.14.33",
+    "git-commit-msg-linter": "^3.0.0",
+    "typescript": "^4.2.3"
   }
 }
