--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "darlan <darlanhermessjb@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.33",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "eslint": "^7.14.0",
@@ -16,7 +17,13 @@
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^5.1.3",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "ts-jest": "^26.5.3",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
