--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "clean-node-api",
   "version": "1.0.0",
   "main": "index.js",
@@ -25,6 +26,7 @@
   },
   "scripts": {
     "test": "jest",
-    "test:staged": "jest"
+    "test:staged": "jest",
+    "postinstall": "husky install"
   }
 }
