--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "test": "jest",
     "test:staged": "jest",
+    "test:dev": "jest --watch",
     "postinstall": "husky install"
   }
 }
